Добавление комментариев. Обновление структуры кода. Выявление проблемных мест

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-pandas
+pandas~=2.2.2
 matplotlib
 numpy
 seaborn
 plotly
-alembic
-sqlalchemy
+alembic~=1.13.2
+sqlalchemy~=2.0.32
 psycopg2
 scikit-learn
-fastapi
-pydantic
-starlette
-dateutil
+fastapi~=0.112.1
+pydantic~=2.8.2
+starlette~=0.38.2
+python-dateutil~=2.9.0.post0
+uvicorn
+python-multipart
